SpeakPython/SpeakPythonParser.py
# $ANTLR 3.4 SpeakPython.g 2015-06-16 19:11:42

import sys
from antlr3 import *
from antlr3.compat import set, frozenset


import re;
sub = re.sub;
from Match import Match;
from Match import GroupCounter;
from Result import Result;
from StringResult import StringResult;
from VarResult import VarResult;
from FunctionResult import FunctionResult;
from KleeneResult import KleeneResult;
from Function import Function;



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
ARROW=4
AT=5
AT_GLOBAL_OPTIONS=6
AT_OPTIONS=7
AT_RESULTS=8
AT_TESTS=9
B_ARROW=10
COMMA=11
COMMENT=12
DEFAULT=13
ELIPSE=14
EQ=15
HASH_NAME=16
KLEENE=17
LA_BR=18
LC_BR=19
LR_BR=20
LS_BR=21
NEWLINE=22
NUM=23
OR=24
PLUS=25
QSTN=26
QUOTE_STRING=27
RA_BR=28
RC_BR=29
REGEX=30
RR_BR=31
RS_BR=32
SEMI=33
STAR=34
TILDE=35
VAR_NAME=36
WHITE_SPACE=37
WORD=38

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ARROW", "AT", "AT_GLOBAL_OPTIONS", "AT_OPTIONS", "AT_RESULTS", "AT_TESTS", 
    "B_ARROW", "COMMA", "COMMENT", "DEFAULT", "ELIPSE", "EQ", "HASH_NAME", 
    "KLEENE", "LA_BR", "LC_BR", "LR_BR", "LS_BR", "NEWLINE", "NUM", "OR", 
    "PLUS", "QSTN", "QUOTE_STRING", "RA_BR", "RC_BR", "REGEX", "RR_BR", 
    "RS_BR", "SEMI", "STAR", "TILDE", "VAR_NAME", "WHITE_SPACE", "WORD"
]




class SpeakPythonParser(Parser):
    grammarFileName = "SpeakPython.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(SpeakPythonParser, self).__init__(input, state, *args, **kwargs)

        self.dfa5 = self.DFA5(
            self, 5,
            eot = self.DFA5_eot,
            eof = self.DFA5_eof,
            min = self.DFA5_min,
            max = self.DFA5_max,
            accept = self.DFA5_accept,
            special = self.DFA5_special,
            transition = self.DFA5_transition
            )

        self.dfa8 = self.DFA8(
            self, 8,
            eot = self.DFA8_eot,
            eof = self.DFA8_eof,
            min = self.DFA8_min,
            max = self.DFA8_max,
            accept = self.DFA8_accept,
            special = self.DFA8_special,
            transition = self.DFA8_transition
            )

        self.dfa17 = self.DFA17(
            self, 17,
            eot = self.DFA17_eot,
            eof = self.DFA17_eof,
            min = self.DFA17_min,
            max = self.DFA17_max,
            accept = self.DFA17_accept,
            special = self.DFA17_special,
            transition = self.DFA17_transition
            )

        self.dfa22 = self.DFA22(
            self, 22,
            eot = self.DFA22_eot,
            eof = self.DFA22_eof,
            min = self.DFA22_min,
            max = self.DFA22_max,
            accept = self.DFA22_accept,
            special = self.DFA22_special,
            transition = self.DFA22_transition
            )

        self.dfa30 = self.DFA30(
            self, 30,
            eot = self.DFA30_eot,
            eof = self.DFA30_eof,
            min = self.DFA30_min,
            max = self.DFA30_max,
            accept = self.DFA30_accept,
            special = self.DFA30_special,
            transition = self.DFA30_transition
            )

        self.dfa34 = self.DFA34(
            self, 34,
            eot = self.DFA34_eot,
            eof = self.DFA34_eof,
            min = self.DFA34_min,
            max = self.DFA34_max,
            accept = self.DFA34_accept,
            special = self.DFA34_special,
            transition = self.DFA34_transition
            )

        self.dfa38 = self.DFA38(
            self, 38,
            eot = self.DFA38_eot,
            eof = self.DFA38_eof,
            min = self.DFA38_min,
            max = self.DFA38_max,
            accept = self.DFA38_accept,
            special = self.DFA38_special,
            transition = self.DFA38_transition
            )

        self.dfa41 = self.DFA41(
            self, 41,
            eot = self.DFA41_eot,
            eof = self.DFA41_eof,
            min = self.DFA41_min,
            max = self.DFA41_max,
            accept = self.DFA41_accept,
            special = self.DFA41_special,
            transition = self.DFA41_transition
            )

        self.dfa42 = self.DFA42(
            self, 42,
            eot = self.DFA42_eot,
            eof = self.DFA42_eof,
            min = self.DFA42_min,
            max = self.DFA42_max,
            accept = self.DFA42_accept,
            special = self.DFA42_special,
            transition = self.DFA42_transition
            )

        self.dfa53 = self.DFA53(
            self, 53,
            eot = self.DFA53_eot,
            eof = self.DFA53_eof,
            min = self.DFA53_min,
            max = self.DFA53_max,
            accept = self.DFA53_accept,
            special = self.DFA53_special,
            transition = self.DFA53_transition
            )

        self.dfa56 = self.DFA56(
            self, 56,
            eot = self.DFA56_eot,
            eof = self.DFA56_eof,
            min = self.DFA56_min,
            max = self.DFA56_max,
            accept = self.DFA56_accept,
            special = self.DFA56_special,
            transition = self.DFA56_transition
            )




        self.delegates = []





    optionVals = {};
    optionValsBackup = optionVals;
    statementFieldDict = {};
    isKeyword = True;
    wordEncountered = False;
    finishedKeywords = False;
    globalTests = {};
    upCount = 0;
    matches = [];
    aliases = {};
    aliasWord = '';
    aliasUseCount = {};
    aliasKeywords = {}
    kGroupRegexes = {};
    isKleene = False;
    kGroupCount = 0;
    keywords = [];
    termNum = 0;



    # $ANTLR start "prog"
    # SpeakPython.g:65:1: prog : s ( NEWLINE | WHITE_SPACE )* EOF ;
    def prog(self, ):

        self.optionVals['wordRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['varRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['wordDelim'] = '[ ,/]';
        self.defaultOptionVals = self.optionVals.copy();

        try:
            try:
                # SpeakPython.g:74:2: ( s ( NEWLINE | WHITE_SPACE )* EOF )
                # SpeakPython.g:74:4: s ( NEWLINE | WHITE_SPACE )* EOF
                pass 
                self._state.following.append(self.FOLLOW_s_in_prog47)
                self.s()

                self._state.following.pop()

                # SpeakPython.g:74:6: ( NEWLINE | WHITE_SPACE )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == NEWLINE or LA1_0 == WHITE_SPACE) :
                        alt1 = 1


                    if alt1 == 1:
                        # SpeakPython.g:
                        pass 
                        if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                            self.input.consume()
                            self._state.errorRecovery = False


                        else:
                            if self._state.backtracking > 0:
                                raise BacktrackingFailed


                            mse = MismatchedSetException(None, self.input)
                            raise mse




                    else:
                        break #loop1


                self.match(self.input, EOF, self.FOLLOW_EOF_in_prog58)

                if self._state.backtracking == 0:
                    pass






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "prog"



    # $ANTLR start "s"
    # SpeakPython.g:77:1: s : ( ( WHITE_SPACE | NEWLINE )* alias s | ( WHITE_SPACE | NEWLINE )* mat s | ( WHITE_SPACE | NEWLINE )* globalOptions s |);
    def s(self, ):
        alias1 = None

        mat2 = None



        self.statementFieldDict = {};
        self.statementFieldDict['testCases'] = [];
        self.statementFieldDict['results'] = [];
        self.upCount = 0;
        self.bracketCount = 0;
        self.wordEncountered = False;
        self.isKeyword = True;
        self.finishedKeywords = False;
        self.keywords = [];
        self.wordAtBracket = 0;
        self.kGroupCount = 0;
        self.isKleene = False;
        self.kGroupRegexes = {};
        self.aliasWord = '';
        aliasUseCount = {};

        try:
            try:
                # SpeakPython.g:99:2: ( ( WHITE_SPACE | NEWLINE )* alias s | ( WHITE_SPACE | NEWLINE )* mat s | ( WHITE_SPACE | NEWLINE )* globalOptions s |)
                alt5 = 4
                alt5 = self.dfa5.predict(self.input)
                if alt5 == 1:
                    # SpeakPython.g:99:4: ( WHITE_SPACE | NEWLINE )* alias s
                    pass 
                    # SpeakPython.g:99:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop2
                        alt2 = 2
                        LA2_0 = self.input.LA(1)

                        if (LA2_0 == NEWLINE or LA2_0 == WHITE_SPACE) :
                            alt2 = 1


                        if alt2 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop2


                    self._state.following.append(self.FOLLOW_alias_in_s85)
                    alias1 = self.alias()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        self.aliases[self.aliasWord] = alias1; 



                    self._state.following.append(self.FOLLOW_s_in_s89)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 2:
                    # SpeakPython.g:100:4: ( WHITE_SPACE | NEWLINE )* mat s
                    pass 
                    # SpeakPython.g:100:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop3
                        alt3 = 2
                        LA3_0 = self.input.LA(1)

                        if (LA3_0 == NEWLINE or LA3_0 == WHITE_SPACE) :
                            alt3 = 1


                        if alt3 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop3


                    self._state.following.append(self.FOLLOW_mat_in_s104)
                    mat2 = self.mat()

                    self._state.following.pop()

                    if self._state.backtracking == 0:
                        pass
                        self.matches.append(mat2); 



                    self._state.following.append(self.FOLLOW_s_in_s108)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 3:
                    # SpeakPython.g:101:4: ( WHITE_SPACE | NEWLINE )* globalOptions s
                    pass 
                    # SpeakPython.g:101:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop4
                        alt4 = 2
                        LA4_0 = self.input.LA(1)

                        if (LA4_0 == NEWLINE or LA4_0 == WHITE_SPACE) :
                            alt4 = 1


                        if alt4 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop4


                    self._state.following.append(self.FOLLOW_globalOptions_in_s123)
                    self.globalOptions()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_s_in_s125)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 4:
                    # SpeakPython.g:102:4: 
                    pass 
                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "s"



    # $ANTLR start "globalOptions"
    # SpeakPython.g:105:1: globalOptions : AT_GLOBAL_OPTIONS myOptions AT ;
    def globalOptions(self, ):
        try:
            try:
                # SpeakPython.g:106:2: ( AT_GLOBAL_OPTIONS myOptions AT )
                # SpeakPython.g:106:4: AT_GLOBAL_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_GLOBAL_OPTIONS, self.FOLLOW_AT_GLOBAL_OPTIONS_in_globalOptions141)

                self._state.following.append(self.FOLLOW_myOptions_in_globalOptions143)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_globalOptions145)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "globalOptions"



    # $ANTLR start "localOptions"
    # SpeakPython.g:109:1: localOptions : AT_OPTIONS myOptions AT ;
    def localOptions(self, ):
        try:
            try:
                # SpeakPython.g:110:2: ( AT_OPTIONS myOptions AT )
                # SpeakPython.g:110:4: AT_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_OPTIONS, self.FOLLOW_AT_OPTIONS_in_localOptions156)

                if self._state.backtracking == 0:
                    pass
                    self.optionValsBackup = self.optionVals; self.optionVals = self.optionValsBackup.copy(); 



                self._state.following.append(self.FOLLOW_myOptions_in_localOptions160)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_localOptions162)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "localOptions"



    # $ANTLR start "myOptions"
    # SpeakPython.g:113:1: myOptions : ( ( WHITE_SPACE | NEWLINE )* myOption myOptions | ( WHITE_SPACE | NEWLINE )* );
    def myOptions(self, ):
        try:
            try:
                # SpeakPython.g:114:2: ( ( WHITE_SPACE | NEWLINE )* myOption myOptions | ( WHITE_SPACE | NEWLINE )* )
                alt8 = 2
                alt8 = self.dfa8.predict(self.input)
                if alt8 == 1:
                    # SpeakPython.g:114:4: ( WHITE_SPACE | NEWLINE )* myOption myOptions
                    pass 
                    # SpeakPython.g:114:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop6
                        alt6 = 2
                        LA6_0 = self.input.LA(1)

                        if (LA6_0 == NEWLINE or LA6_0 == WHITE_SPACE) :
                            alt6 = 1


                        if alt6 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop6


                    self._state.following.append(self.FOLLOW_myOption_in_myOptions182)
                    self.myOption()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_myOptions_in_myOptions184)
                    self.myOptions()

                    self._state.following.pop()


                elif alt8 == 2:
                    # SpeakPython.g:115:4: ( WHITE_SPACE | NEWLINE )*
                    pass 
                    # SpeakPython.g:115:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop7
                        alt7 = 2
                        LA7_0 = self.input.LA(1)

                        if (LA7_0 == NEWLINE or LA7_0 == WHITE_SPACE) :
                            alt7 = 1


                        if alt7 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop7


                    if self._state.backtracking == 0:
                        pass





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "myOptions"



    # $ANTLR start "myOption"
    # SpeakPython.g:118:1: myOption : ( WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )? | WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )? );
    def myOption(self, ):
        WORD3 = None
        REGEX4 = None
        WORD5 = None

        try:
            try:
                # SpeakPython.g:119:2: ( WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )? | WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )? )
                alt17 = 2
                alt17 = self.dfa17.predict(self.input)
                if alt17 == 1:
                    # SpeakPython.g:119:4: WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )?
                    pass 
                    WORD3 = self.match(self.input, WORD, self.FOLLOW_WORD_in_myOption209)

                    # SpeakPython.g:119:9: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop9
                        alt9 = 2
                        LA9_0 = self.input.LA(1)

                        if (LA9_0 == NEWLINE or LA9_0 == WHITE_SPACE) :
                            alt9 = 1


                        if alt9 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop9


                    self.match(self.input, EQ, self.FOLLOW_EQ_in_myOption220)

                    # SpeakPython.g:119:37: ( RA_BR )?
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == RA_BR) :
                        alt10 = 1
                    if alt10 == 1:
                        # SpeakPython.g:119:38: RA_BR
                        pass 
                        self.match(self.input, RA_BR, self.FOLLOW_RA_BR_in_myOption223)




                    # SpeakPython.g:119:46: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop11
                        alt11 = 2
                        LA11_0 = self.input.LA(1)

                        if (LA11_0 == NEWLINE or LA11_0 == WHITE_SPACE) :
                            alt11 = 1


                        if alt11 == 1:
                            # SpeakPython.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                if self._state.backtracking > 0:
                                    raise BacktrackingFailed


                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop11


                    REGEX4 = self.match(self.input, REGEX, self.FOLLOW_REGEX_in_myOption236)

                    # SpeakPython.g:119:77: ( SEMI )?
                    alt12 = 2
                    LA12_0 = self.input.LA(1)

                    if (LA12_0 == SEMI) :
                        alt12 = 1
                    if alt12 == 1:
                        # SpeakPython.g:119:78: SEMI
                        pass 
                        self.match(self.input, SEMI, self.FOLLOW_SEMI_in_myOption239)




                    if self._state.backtracking == 0:
                        pass
                        self.optionVals[WORD3.text] = REGEX4.text[1:-2]; 




                elif alt17 == 2:
                    # SpeakPython.g:120:4: WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )?
                    pass 
                    WORD5 = self.match(self.input, WORD, self.FOLLOW_WORD_in_myOption248)

                    # SpeakPython.g:120:9: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop13
                        alt13 = 2
                        LA13_0 = self.input.LA(1)

                        if (LA13_0 == NEWLINE or LA13_0 == WHITE_SPACE) :
                            alt13 = 1

